Add Floci architecture section + mermaid diagram to README, extend _shared.js, rewrite stress tests to SOAP